--- a/src/main/resources/ventanas/Usuario_registrado_listado_ventanas.html
+++ b/src/main/resources/ventanas/Usuario_registrado_listado_ventanas.html
@@ -14,6 +14,7 @@
    <vaadin-button plain-text _id="eliminar_button" :middle>
      Eliminar usuario 
    </vaadin-button>
+   <vaadin-label plain-text _id="id"></vaadin-label>
   </vaadin-horizontal-layout>
  </body>
 </html>
