--- a/src/main/resources/ventanas/Zona_cabecera_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_administrador_ventanas.html
@@ -9,9 +9,7 @@
   <vaadin-horizontal-layout width-full>
    <vaadin-image width="250px" height="125px"></vaadin-image>
    <vaadin-vertical-layout size-auto :right>
-    <vaadin-button width="150px" height="150px" plain-text _id="imagen">
-      No imagen 
-    </vaadin-button>
+    <vaadin-image width="250px" height="125px" _id="imagen"></vaadin-image>
     <vaadin-button icon="fonticon://Vaadin-Icons/e7fa" style-name="link" plain-text _id="cambiar_imagen">
       Cambiar Imagen 
     </vaadin-button>
