--- a/src/main/resources/ventanas/Zona_opciones_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_administrador_ventanas.html
@@ -16,6 +16,9 @@
    <vaadin-button icon="fonticon://Vaadin-Icons/e731" style-name="link" plain-text _id="lista_videos">
      Lista de videos 
    </vaadin-button>
+   <vaadin-button icon="fonticon://Vaadin-Icons/e622" style-name="link" plain-text _id="volveAtras">
+     Volver Atrás 
+   </vaadin-button>
    <vaadin-button icon="fonticon://Vaadin-Icons/e798" style-name="link" plain-text _id="cerrar_sesion">
      Cerrar sesión 
    </vaadin-button>
