Se añade Scroll a la ventana de perfil registrado ,listas de suscripciones y suscriptores

--- a/src/main/resources/ventanas/Lista_usuarios_ventanas.html
+++ b/src/main/resources/ventanas/Lista_usuarios_ventanas.html
@@ -7,13 +7,11 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
-   <vaadin-vertical-layout>
-    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
-    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
-    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
-    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
-   </vaadin-vertical-layout>
-  </vaadin-panel>
+  <vaadin-vertical-layout size-auto margin="false">
+   <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+   <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+   <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+   <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+  </vaadin-vertical-layout>
  </body>
 </html>
