--- a/src/main/resources/ventanas/Listado_suscripciones_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Listado_suscripciones_registrado_ventanas.html
@@ -7,29 +7,25 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
-   <vaadin-vertical-layout size-auto>
-    <vaadin-form-layout size-auto margin="false" :center>
-     <vaadin-label plain-text _id="titulo">
-       Canales a los que estoy suscrito 
-     </vaadin-label>
-     <vaadin-label plain-text _id="subtitulo">
-       Usuarios a lso que sigues 
-     </vaadin-label>
-     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="usuario_layout1">
+  <vaadin-vertical-layout>
+   <vaadin-form-layout size-auto margin="false" :center>
+    <vaadin-label plain-text _id="titulo">
+      Canales a los que estoy suscrito 
+    </vaadin-label>
+    <vaadin-label plain-text _id="subtitulo">
+      Usuarios a lso que sigues 
+    </vaadin-label>
+    <vaadin-panel width-auto height="400px">
+     <vaadin-form-layout size-auto margin="false">
       <ventanas-suscripcion_ventanas></ventanas-suscripcion_ventanas>
-     </vaadin-vertical-layout>
-     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="usuario_layout2">
       <ventanas-suscripcion_ventanas></ventanas-suscripcion_ventanas>
-     </vaadin-vertical-layout>
-     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="usuario_layout3">
       <ventanas-suscripcion_ventanas></ventanas-suscripcion_ventanas>
-     </vaadin-vertical-layout>
-     <vaadin-button plain-text _id="atras">
-       Atrás 
-     </vaadin-button>
-    </vaadin-form-layout>
-   </vaadin-vertical-layout>
-  </vaadin-panel>
+     </vaadin-form-layout>
+    </vaadin-panel>
+    <vaadin-button plain-text _id="atras">
+      Atrás 
+    </vaadin-button>
+   </vaadin-form-layout>
+  </vaadin-vertical-layout>
  </body>
 </html>
