--- a/src/main/resources/ventanas/Perfil_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Perfil_registrado_ventanas.html
@@ -9,8 +9,10 @@
  <body>
   <vaadin-panel size-full>
    <vaadin-vertical-layout size-auto>
-    <vaadin-form-layout spacing="false" size-auto margin="false">
+    <vaadin-form-layout spacing="false" size-auto margin="false" :center>
      <ventanas-zona_cabecera_perfli_-registrado_ventanas _id="cabecera"></ventanas-zona_cabecera_perfli_-registrado_ventanas>
+    </vaadin-form-layout>
+    <vaadin-form-layout size-auto margin="false">
      <vaadin-horizontal-layout>
       <ventanas-zona_opciones_perfil_registrado_ventanas _id="zona_opciones_perfil_registrado"></ventanas-zona_opciones_perfil_registrado_ventanas>
       <ventanas-zona_cuerpo_perfil_registrado_ventanas _id="zona_cuerpo_perfil_registrado"></ventanas-zona_cuerpo_perfil_registrado_ventanas>
