--- a/src/main/resources/ventanas/Usuario_ventanas.html
+++ b/src/main/resources/ventanas/Usuario_ventanas.html
@@ -6,8 +6,8 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-vertical-layout size-full>
-   <vaadin-horizontal-layout width="200px" height="150px">
+  <vaadin-vertical-layout size-auto>
+   <vaadin-horizontal-layout>
     <vaadin-form-layout size-auto margin="false">
      <vaadin-button width="180px" height="150px" plain-text _id="imagen">
        No imagen 
