--- a/src/main/resources/ventanas/Zona_opciones_perfil_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_perfil_registrado_ventanas.html
@@ -8,28 +8,28 @@
  <body>
   <vaadin-vertical-layout size-full>
    <vaadin-form-layout size-auto>
-    <vaadin-label plain-text _id="nombre_usuario">
+    <vaadin-label style-name="huge" plain-text _id="nombre_usuario">
       Nombre del usuario 
     </vaadin-label>
-    <vaadin-button style-name="link" plain-text _id="inicio">
-      Inicio 
+    <vaadin-button icon="fonticon://Vaadin-Icons/e622" style-name="link" plain-text _id="inicio">
+      Volver Atrás 
     </vaadin-button>
-    <vaadin-button style-name="link" plain-text _id="subir_video">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e746" style-name="link" plain-text _id="subir_video">
       Subir Video 
     </vaadin-button>
-    <vaadin-button style-name="link" plain-text _id="modificarDatos">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e7fa" style-name="link" plain-text _id="modificarDatos">
       Modificar Datos 
     </vaadin-button>
-    <vaadin-button style-name="link" plain-text _id="cambiarContrasena">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e6ab" style-name="link" plain-text _id="cambiarContrasena">
       Cambiar Contraseña 
     </vaadin-button>
-    <vaadin-button style-name="link" plain-text _id="historial">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e7ee" style-name="link" plain-text _id="historial">
       Historial 
     </vaadin-button>
-    <vaadin-button style-name="link" plain-text _id="videosUltimosSubidos">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e7ee" style-name="link" plain-text _id="videosUltimosSubidos">
       Videos Ultimos subidos 
     </vaadin-button>
-    <vaadin-button style-name="link" plain-text _id="cerrarSesion">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e798" style-name="link" plain-text _id="cerrarSesion">
       Cerrar Sesión 
     </vaadin-button>
    </vaadin-form-layout>
