--- a/src/main/resources/ventanas/Lista_videos_subidos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_videos_subidos_ventanas.html
@@ -7,28 +7,24 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
+  <vaadin-panel size-auto>
    <vaadin-vertical-layout size-auto>
-    <vaadin-vertical-layout size-auto margin="false" :bottom :right>
-     <vaadin-label plain-text :center>
+    <vaadin-form-layout size-auto margin="false" :center>
+     <vaadin-label plain-text>
        Videos Propios 
      </vaadin-label>
-     <vaadin-horizontal-layout :center>
+     <vaadin-horizontal-layout>
       <vaadin-text-field value="Buscar video" :right></vaadin-text-field>
       <vaadin-button plain-text :right>
         Buscar 
       </vaadin-button>
      </vaadin-horizontal-layout>
-     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="videosubido1">
-      <ventanas-video_subido_ventanas></ventanas-video_subido_ventanas>
-     </vaadin-vertical-layout>
-     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="videosubido2">
-      <ventanas-video_subido_ventanas></ventanas-video_subido_ventanas>
-     </vaadin-vertical-layout>
-     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="videosubido3">
-      <ventanas-video_subido_ventanas></ventanas-video_subido_ventanas>
-     </vaadin-vertical-layout>
-    </vaadin-vertical-layout>
+    </vaadin-form-layout>
+    <vaadin-form-layout size-auto margin="false">
+     <ventanas-video_subido_ventanas></ventanas-video_subido_ventanas>
+     <ventanas-video_subido_ventanas></ventanas-video_subido_ventanas>
+     <ventanas-video_subido_ventanas></ventanas-video_subido_ventanas>
+    </vaadin-form-layout>
    </vaadin-vertical-layout>
   </vaadin-panel>
  </body>
