--- a/src/main/resources/ventanas/Listado_suscriptores_ventanas.html
+++ b/src/main/resources/ventanas/Listado_suscriptores_ventanas.html
@@ -7,19 +7,23 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
-   <vaadin-form-layout width="80%">
+  <vaadin-vertical-layout>
+   <vaadin-form-layout size-auto :center>
     <vaadin-label plain-text _id="titulo">
       Listado de suscriptortes 
     </vaadin-label>
     <vaadin-label plain-text _id="subtitulo">
       Usuarios que te siguen: 
     </vaadin-label>
-    <ventanas-lista_usuarios_ventanas></ventanas-lista_usuarios_ventanas>
+    <vaadin-panel width-auto height="400px">
+     <vaadin-form-layout size-auto margin>
+      <ventanas-lista_usuarios_ventanas></ventanas-lista_usuarios_ventanas>
+     </vaadin-form-layout>
+    </vaadin-panel>
     <vaadin-button plain-text _id="atras">
       Atras 
     </vaadin-button>
    </vaadin-form-layout>
-  </vaadin-panel>
+  </vaadin-vertical-layout>
  </body>
 </html>
