--- a/src/main/resources/ventanas/Zona_cuerpo_perfil_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cuerpo_perfil_registrado_ventanas.html
@@ -7,11 +7,15 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
+  <vaadin-vertical-layout size-full>
    <vaadin-horizontal-layout _id="cuerpo_regitrado">
-    <ventanas-lista_videos_subidos_ventanas></ventanas-lista_videos_subidos_ventanas>
-    <ventanas-listas_reproduccion_propias_ventanas></ventanas-listas_reproduccion_propias_ventanas>
+    <vaadin-panel width-auto height="600px" _id="panelVideosPropios">
+     <ventanas-lista_videos_subidos_ventanas></ventanas-lista_videos_subidos_ventanas>
+    </vaadin-panel>
+    <vaadin-panel width-auto height="600px" _id="panelListaReproduccion">
+     <ventanas-listas_reproduccion_propias_ventanas></ventanas-listas_reproduccion_propias_ventanas>
+    </vaadin-panel>
    </vaadin-horizontal-layout>
-  </vaadin-panel>
+  </vaadin-vertical-layout>
  </body>
 </html>
