Se añade cargar videos propios (esta regular)

--- a/src/main/resources/ventanas/Video_subido_ventanas.html
+++ b/src/main/resources/ventanas/Video_subido_ventanas.html
@@ -10,9 +10,7 @@
   <vaadin-vertical-layout size-full margin="false">
    <vaadin-horizontal-layout>
     <vaadin-form-layout size-auto margin="false">
-     <vaadin-vertical-layout size-auto margin="false" _id="video_subido_layout">
-      <ventanas-video_ventanas></ventanas-video_ventanas>
-     </vaadin-vertical-layout>
+     <ventanas-video_ventanas _id="video"></ventanas-video_ventanas>
     </vaadin-form-layout>
     <vaadin-form-layout size-auto margin="false" :middle :center>
      <vaadin-button plain-text _id="modificar">
