--- a/src/main/resources/ventanas/Video_ventanas.html
+++ b/src/main/resources/ventanas/Video_ventanas.html
@@ -9,7 +9,9 @@
   <vaadin-vertical-layout size-full>
    <vaadin-form-layout size-auto>
     <vaadin-video caption="" _id="video"></vaadin-video>
-    <vaadin-link caption="Título" _id="titulo_video"></vaadin-link>
+    <vaadin-button style-name="link" plain-text _id="tituloVideo">
+      Titulo 
+    </vaadin-button>
    </vaadin-form-layout>
   </vaadin-vertical-layout>
  </body>
