--- a/src/main/resources/ventanas/Video_ventanas.html
+++ b/src/main/resources/ventanas/Video_ventanas.html
@@ -8,7 +8,7 @@
  <body>
   <vaadin-vertical-layout size-full>
    <vaadin-form-layout size-auto>
-    <vaadin-video caption="" _id="video"></vaadin-video>
+    <vaadin-image width="300px" height="145px" _id="miniaturaVideo"></vaadin-image>
     <vaadin-button style-name="link" plain-text _id="tituloVideo">
       Titulo 
     </vaadin-button>
