--- a/src/main/resources/ventanas/Listado_suscriptores_ventanas.html
+++ b/src/main/resources/ventanas/Listado_suscriptores_ventanas.html
@@ -8,7 +8,7 @@
  </head>
  <body>
   <vaadin-vertical-layout>
-   <vaadin-form-layout size-auto :center>
+   <vaadin-form-layout responsive size-auto :center>
     <vaadin-label plain-text _id="titulo">
       Listado de suscriptortes 
     </vaadin-label>
