--- a/src/main/resources/ventanas/Modificar_video_ventanas.html
+++ b/src/main/resources/ventanas/Modificar_video_ventanas.html
@@ -7,19 +7,22 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout spacing="false" size-auto margin="false">
-   <vaadin-form-layout spacing="false" size-auto margin="false" :center>
+  <vaadin-vertical-layout spacing="false" size-full margin="false">
+   <vaadin-form-layout size-auto margin :center>
     <vaadin-label plain-text _id="titulo_modificar_datos">
       Modificar Datos del Video 
     </vaadin-label>
-   </vaadin-form-layout>
-   <vaadin-form-layout spacing="false" size-auto margin="false">
-    <ventanas-anadir_datos_video_ventanas></ventanas-anadir_datos_video_ventanas>
-   </vaadin-form-layout>
-   <vaadin-form-layout spacing="false" size-auto margin="false" :center>
-    <vaadin-button plain-text _id="modifcar">
-      Modificar 
-    </vaadin-button>
+    <ventanas-anadir_datos_video_ventanas _id="datosVideos"></ventanas-anadir_datos_video_ventanas>
+    <vaadin-form-layout responsive size-auto margin="false">
+     <vaadin-horizontal-layout>
+      <vaadin-button plain-text _id="atras">
+        Atrás 
+      </vaadin-button>
+      <vaadin-button plain-text _id="modificar">
+        modifcar 
+      </vaadin-button>
+     </vaadin-horizontal-layout>
+    </vaadin-form-layout>
    </vaadin-form-layout>
   </vaadin-vertical-layout>
  </body>
