--- a/src/main/resources/ventanas/Video_ventanas.html
+++ b/src/main/resources/ventanas/Video_ventanas.html
@@ -9,9 +9,12 @@
   <vaadin-vertical-layout size-full>
    <vaadin-form-layout size-auto>
     <vaadin-image width="300px" height="145px" _id="miniaturaVideo"></vaadin-image>
-    <vaadin-button style-name="link" plain-text _id="tituloVideo">
-      Titulo 
-    </vaadin-button>
+    <vaadin-horizontal-layout>
+     <vaadin-label plain-text _id="idVideo" :right></vaadin-label>
+     <vaadin-button style-name="link" plain-text _id="tituloVideo" :center>
+       Titulo 
+     </vaadin-button>
+    </vaadin-horizontal-layout>
    </vaadin-form-layout>
   </vaadin-vertical-layout>
  </body>
