--- a/src/main/resources/ventanas/Lista_videos_subidos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_videos_subidos_ventanas.html
@@ -14,7 +14,7 @@
        Videos Propios 
      </vaadin-label>
      <vaadin-horizontal-layout>
-      <vaadin-text-field value="Buscar video" _id="buscadorTF" :right></vaadin-text-field>
+      <vaadin-text-field placeholder="Buscar video" _id="buscadorTF" :right></vaadin-text-field>
       <vaadin-button plain-text _id="buscarB" :right>
         Buscar 
       </vaadin-button>
