--- a/src/main/resources/ventanas/Listas_reproduccion_propias_ventanas.html
+++ b/src/main/resources/ventanas/Listas_reproduccion_propias_ventanas.html
@@ -13,7 +13,7 @@
        Listas de reproducion 
      </vaadin-label>
      <vaadin-horizontal-layout :center>
-      <vaadin-text-field value="Buscar lista" _id="buscar_lista" :right></vaadin-text-field>
+      <vaadin-text-field placeholder="Buscar lista" _id="buscarLista" :right></vaadin-text-field>
       <vaadin-button plain-text _id="buscar" :right>
         Buscar 
       </vaadin-button>
