--- a/src/main/resources/ventanas/Zona_cabecera_comun_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_comun_ventanas.html
@@ -52,9 +52,7 @@
     </vaadin-horizontal-layout>
     <vaadin-horizontal-layout>
      <vaadin-form-layout spacing="false" size-auto margin="false">
-      <vaadin-button width="150px" height="150px" plain-text _id="imagen">
-        No imagen 
-      </vaadin-button>
+      <vaadin-image width="150px" height="150px" _id="imagen"></vaadin-image>
      </vaadin-form-layout>
     </vaadin-horizontal-layout>
    </vaadin-horizontal-layout>
