--- a/src/main/resources/ventanas/Zona_cabecera_perfli_Registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_perfli_Registrado_ventanas.html
@@ -8,7 +8,9 @@
  </head>
  <body>
   <vaadin-vertical-layout size-full>
-   <ventanas-zona_cabecera_comun_ventanas _id="zcv"></ventanas-zona_cabecera_comun_ventanas>
+   <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical" :center>
+    <ventanas-zona_cabecera_comun_ventanas _id="zcv"></ventanas-zona_cabecera_comun_ventanas>
+   </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
