--- a/src/main/resources/ventanas/Zona_opciones_perfil_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_perfil_registrado_ventanas.html
@@ -11,10 +11,10 @@
     <vaadin-label style-name="huge" plain-text _id="nombre_usuario">
       Nombre del usuario 
     </vaadin-label>
-    <vaadin-button icon="fonticon://Vaadin-Icons/e622" style-name="link" plain-text _id="inicio">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e622" style-name="link" plain-text _id="volverAtras">
       Volver Atrás 
     </vaadin-button>
-    <vaadin-button icon="fonticon://Vaadin-Icons/e746" style-name="link" plain-text _id="subir_video">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e746" style-name="link" plain-text _id="subirVideo">
       Subir Video 
     </vaadin-button>
     <vaadin-button icon="fonticon://Vaadin-Icons/e7fa" style-name="link" plain-text _id="modificarDatos">
