--- a/src/main/resources/ventanas/Ficha_propietario_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_propietario_ventanas.html
@@ -8,14 +8,18 @@
  </head>
  <body>
   <vaadin-vertical-layout>
-   <ventanas-zona_cabecera_video_propietario_ventanas _id="zcvp"></ventanas-zona_cabecera_video_propietario_ventanas>
-   <vaadin-form-layout size-auto margin="false">
-    <vaadin-horizontal-layout>
-     <ventanas-ficha_video_ventanas></ventanas-ficha_video_ventanas>
-     <ventanas-zona_opciones_video_propietario_ventanas></ventanas-zona_opciones_video_propietario_ventanas>
+   <vaadin-vertical-layout spacing="false" margin="false" _id="vertical" :center>
+    <ventanas-zona_cabecera_video_propietario_ventanas _id="zonaCabecera"></ventanas-zona_cabecera_video_propietario_ventanas>
+   </vaadin-vertical-layout>
+   <vaadin-form-layout size-auto margin="false" _id="form">
+    <vaadin-horizontal-layout _id="horizontal">
+     <ventanas-ficha_video_ventanas _id="fichaVideo"></ventanas-ficha_video_ventanas>
+     <ventanas-zona_opciones_video_propietario_ventanas _id="zonaOpcionesPropietario"></ventanas-zona_opciones_video_propietario_ventanas>
     </vaadin-horizontal-layout>
+    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="verti2">
+     <ventanas-lista_comentarios_deshabilitables_ventanas _id="listaComentariosDes"></ventanas-lista_comentarios_deshabilitables_ventanas>
+    </vaadin-vertical-layout>
    </vaadin-form-layout>
-   <ventanas-lista_comentarios_deshabilitables_ventanas></ventanas-lista_comentarios_deshabilitables_ventanas>
   </vaadin-vertical-layout>
  </body>
 </html>
