--- a/src/main/resources/ventanas/Usuario_invitado_ventanas.html
+++ b/src/main/resources/ventanas/Usuario_invitado_ventanas.html
@@ -8,7 +8,7 @@
  </head>
  <body>
   <vaadin-panel size-auto>
-   <vaadin-vertical-layout size-auto>
+   <vaadin-vertical-layout size-auto _id="vertical">
     <ventanas-zona_inicio_cabecera_invitado_ventanas _id="cabecera"></ventanas-zona_inicio_cabecera_invitado_ventanas>
     <ventanas-zona_inicio_comun_ventanas _id="comun"></ventanas-zona_inicio_comun_ventanas>
    </vaadin-vertical-layout>
