--- a/src/main/resources/ventanas/Videos_tendencias_ventanas.html
+++ b/src/main/resources/ventanas/Videos_tendencias_ventanas.html
@@ -13,8 +13,8 @@
       Videos tendencias "Más me gusta" 
     </vaadin-label>
    </vaadin-form-layout>
-   <vaadin-panel width="70%">
-    <vaadin-vertical-layout spacing="false" responsive size-auto margin="false" _id="videos_tendencias_layout">
+   <vaadin-panel width="70%" _id="panel">
+    <vaadin-vertical-layout spacing="false" responsive size-auto margin="false" _id="verticalLista">
      <ventanas-lista_videos_ventanas responsive></ventanas-lista_videos_ventanas>
     </vaadin-vertical-layout>
    </vaadin-panel>
