--- a/src/main/resources/ventanas/Zona_inicio_comun_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_comun_ventanas.html
@@ -8,8 +8,10 @@
  </head>
  <body>
   <vaadin-vertical-layout spacing="false" responsive size-auto margin="false">
-   <ventanas-videos_tendencias_ventanas responsive></ventanas-videos_tendencias_ventanas>
-   <ventanas-videos_usuarios_registrados_ventanas responsive></ventanas-videos_usuarios_registrados_ventanas>
+   <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
+    <ventanas-videos_tendencias_ventanas responsive></ventanas-videos_tendencias_ventanas>
+    <ventanas-videos_usuarios_registrados_ventanas responsive></ventanas-videos_usuarios_registrados_ventanas>
+   </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
