--- a/src/main/resources/ventanas/Lista_reproduccion_propia_ventanas.html
+++ b/src/main/resources/ventanas/Lista_reproduccion_propia_ventanas.html
@@ -4,22 +4,25 @@
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
   <meta name="vaadin-version" content="8.0.5">
+  <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
-   <vaadin-vertical-layout size-auto>
-    <vaadin-form-layout size-auto margin="false" :center>
-     <vaadin-label plain-text _id="nombre_lista">
-       Lista de Reproducción 
-     </vaadin-label>
-     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="video_layout1"></vaadin-vertical-layout>
-     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="video_layout2"></vaadin-vertical-layout>
-     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="video_layout3"></vaadin-vertical-layout>
-     <vaadin-button plain-text _id="atras">
-       Atrás 
-     </vaadin-button>
-    </vaadin-form-layout>
-   </vaadin-vertical-layout>
-  </vaadin-panel>
+  <vaadin-vertical-layout>
+   <vaadin-form-layout size-auto margin="false" :center>
+    <vaadin-label plain-text _id="nombre_lista">
+      Lista de Reproducción 
+    </vaadin-label>
+    <vaadin-panel width-auto height="400px">
+     <vaadin-form-layout size-auto margin _id="form">
+      <ventanas-video_lista_reproduccion_ventanas></ventanas-video_lista_reproduccion_ventanas>
+      <ventanas-video_lista_reproduccion_ventanas></ventanas-video_lista_reproduccion_ventanas>
+      <ventanas-video_lista_reproduccion_ventanas></ventanas-video_lista_reproduccion_ventanas>
+     </vaadin-form-layout>
+    </vaadin-panel>
+    <vaadin-button plain-text _id="atras">
+      Atrás 
+    </vaadin-button>
+   </vaadin-form-layout>
+  </vaadin-vertical-layout>
  </body>
 </html>
