--- a/src/main/resources/ventanas/Lista_videos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_videos_ventanas.html
@@ -8,22 +8,11 @@
  </head>
  <body>
   <vaadin-panel responsive size-auto>
-   <vaadin-horizontal-layout responsive>
-    <vaadin-horizontal-layout responsive _id="video_layout1">
-     <ventanas-video_ventanas responsive></ventanas-video_ventanas>
-    </vaadin-horizontal-layout>
-    <vaadin-horizontal-layout responsive _id="video_layout2">
-     <ventanas-video_ventanas responsive></ventanas-video_ventanas>
-    </vaadin-horizontal-layout>
-    <vaadin-horizontal-layout responsive _id="video_layout3">
-     <ventanas-video_ventanas responsive></ventanas-video_ventanas>
-    </vaadin-horizontal-layout>
-    <vaadin-horizontal-layout responsive _id="video_layout4">
-     <ventanas-video_ventanas responsive></ventanas-video_ventanas>
-    </vaadin-horizontal-layout>
-    <vaadin-horizontal-layout responsive _id="video_layout41">
-     <ventanas-video_ventanas responsive></ventanas-video_ventanas>
-    </vaadin-horizontal-layout>
+   <vaadin-horizontal-layout responsive _id="horizontal">
+    <ventanas-video_ventanas responsive></ventanas-video_ventanas>
+    <ventanas-video_ventanas responsive></ventanas-video_ventanas>
+    <ventanas-video_ventanas responsive></ventanas-video_ventanas>
+    <ventanas-video_ventanas responsive></ventanas-video_ventanas>
    </vaadin-horizontal-layout>
   </vaadin-panel>
  </body>
