Se actualizan diagramas de secuenciasy se cargan listas de tendencias

--- a/src/main/resources/ventanas/Lista_total_videos_subidos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_total_videos_subidos_ventanas.html
@@ -19,7 +19,7 @@
      </vaadin-button>
     </vaadin-horizontal-layout>
     <vaadin-panel width-auto height="400px">
-     <vaadin-form-layout size-auto margin>
+     <vaadin-form-layout size-auto margin _id="listaVideosFL">
       <ventanas-video></ventanas-video>
       <ventanas-video></ventanas-video>
       <ventanas-video></ventanas-video>
