--- a/src/main/resources/ventanas/Usuario_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Usuario_administrador_ventanas.html
@@ -8,8 +8,10 @@
  </head>
  <body>
   <vaadin-vertical-layout spacing="false" margin="false">
-   <ventanas-zona_cabecera_video_administrador_ventanas _id="zcva"></ventanas-zona_cabecera_video_administrador_ventanas>
-   <ventanas-zona_inicio_cuerpo_administrador_ventanas _id="zica"></ventanas-zona_inicio_cuerpo_administrador_ventanas>
+   <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
+    <ventanas-zona_cabecera_video_administrador_ventanas _id="zcva"></ventanas-zona_cabecera_video_administrador_ventanas>
+    <ventanas-zona_inicio_cuerpo_administrador_ventanas _id="zica"></ventanas-zona_inicio_cuerpo_administrador_ventanas>
+   </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
