--- a/src/main/resources/ventanas/Usuario_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Usuario_registrado_ventanas.html
@@ -8,7 +8,7 @@
  </head>
  <body>
   <vaadin-panel size-auto>
-   <vaadin-vertical-layout size-auto>
+   <vaadin-vertical-layout size-auto _id="vertical">
     <ventanas-zona_inicio_cabecera_registrado_ventanas _id="zicr"></ventanas-zona_inicio_cabecera_registrado_ventanas>
     <ventanas-zona_inicio_cuerpo_registrado_ventanas _id="zicr1"></ventanas-zona_inicio_cuerpo_registrado_ventanas>
    </vaadin-vertical-layout>
