--- a/src/main/resources/ventanas/Zona_cabecera_perfil_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_perfil_visitante_ventanas.html
@@ -8,10 +8,10 @@
  </head>
  <body>
   <vaadin-vertical-layout spacing="false" height="50%" margin="false">
-   <vaadin-vertical-layout spacing="false" margin="false">
+   <vaadin-vertical-layout spacing="false" margin="false" _id="vertical">
     <ventanas-zona_cabecera_comun_ventanas width-full height="20%"></ventanas-zona_cabecera_comun_ventanas>
-    <vaadin-vertical-layout spacing="false" height="50%" margin="false" :right>
-     <vaadin-button plain-text :right>
+    <vaadin-vertical-layout spacing="false" height="50%" margin="false" _id="vertical2" :right>
+     <vaadin-button plain-text _id="suscribirse" :right>
        Suscribirse 
      </vaadin-button>
     </vaadin-vertical-layout>
