--- a/src/main/resources/ventanas/Zona_cuerpo_perfil_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cuerpo_perfil_visitante_ventanas.html
@@ -8,7 +8,7 @@
  </head>
  <body>
   <vaadin-panel size-full>
-   <vaadin-vertical-layout size-auto>
+   <vaadin-vertical-layout size-auto _id="vertical">
     <ventanas-lista_videos_agenos_ventanas></ventanas-lista_videos_agenos_ventanas>
     <ventanas-listas_de_reproduccion_ventanas></ventanas-listas_de_reproduccion_ventanas>
    </vaadin-vertical-layout>
