--- a/src/main/resources/ventanas/Perfil_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Perfil_visitante_ventanas.html
@@ -3,12 +3,12 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.1.5">
+  <meta name="vaadin-version" content="8.0.5">
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
   <vaadin-panel size-auto>
-   <vaadin-vertical-layout size-auto>
+   <vaadin-vertical-layout size-auto _id="vertical">
     <ventanas-zona_cabecera_perfil_visitante_ventanas></ventanas-zona_cabecera_perfil_visitante_ventanas>
     <ventanas-zona_cuerpo_perfil_visitante_ventanas></ventanas-zona_cuerpo_perfil_visitante_ventanas>
    </vaadin-vertical-layout>
