--- a/src/main/resources/ventanas/Zona_inicio_cuerpo_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_cuerpo_registrado_ventanas.html
@@ -8,9 +8,11 @@
  </head>
  <body>
   <vaadin-vertical-layout spacing="false" responsive size-auto margin="false">
-   <ventanas-videos_tendencias_ventanas responsive></ventanas-videos_tendencias_ventanas>
-   <ventanas-videos_de_suscripciones_ventanas responsive></ventanas-videos_de_suscripciones_ventanas>
-   <ventanas-videos_relacionados_ventanas responsive></ventanas-videos_relacionados_ventanas>
+   <vaadin-vertical-layout size-auto _id="vertical">
+    <ventanas-videos_tendencias_ventanas responsive></ventanas-videos_tendencias_ventanas>
+    <ventanas-videos_de_suscripciones_ventanas responsive></ventanas-videos_de_suscripciones_ventanas>
+    <ventanas-videos_relacionados_ventanas responsive></ventanas-videos_relacionados_ventanas>
+   </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
