Se añade videos tendencias en Admin

--- a/src/main/resources/ventanas/Zona_inicio_cuerpo_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_cuerpo_administrador_ventanas.html
@@ -8,7 +8,9 @@
  </head>
  <body>
   <vaadin-vertical-layout size-full>
-   <ventanas-zona_inicio_comun_ventanas></ventanas-zona_inicio_comun_ventanas>
+   <vaadin-vertical-layout size-auto _id="vertical">
+    <ventanas-zona_inicio_comun_ventanas></ventanas-zona_inicio_comun_ventanas>
+   </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
